--- a/index.html
+++ b/index.html
@@ -1,28 +1,39 @@
 ﻿<!DOCTYPE html>
-
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
     <title>Portfolio</title>
+    <link rel="icon" type="image/icon" href="Images/favicon.ico"/>
     <link rel="Stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https:/kit.fontawesome.com/b99e675b6e.js"></script>
 </head>
-<body>
-    <h1>Welcome xd</h1>
-
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </div>
-            <div class="col">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </div>
-            <div class="col">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </div>
-        </div>
-    </div>
+<body onload="document.body.style.opacity='1'">
+  <div id="mySidenav" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <li><a href="#"><i class="fas fa-home"></i> Menu</a></li>
+    <li><a href="#"><i class="fas fa-address-card"></i> About</a></li>
+    <li><a href="#"><i class="fas fa-project-diagram"></i> Projects</a></li>
+    <li><a href="#"><i class="fas fa-user-graduate"></i> Gruatuation</a></li>
+    <li><a href="#"><i class="fas fa-briefcase"></i> Work</a></li>
+    <li><a href="#"><i class="fas fa-id-card-alt"></i> Contact</a></li>
+    <div class="social_media">
+        <a href="https://www.instagram.com/bram._n/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://stackoverflow.com/users/15190653/bram0943" target="_blank"><i class="fab fa-stack-overflow"></i></a>
+        <a href="https://www.tiktok.com/@yung_kroisand?" target="_blank"><i class="fab fa-tiktok"></i></a>
+    </div> 
+  </div>
+  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+    <div> <img src="Images/MeSitting2.png" alt="BromSitting"> </div>
+    <script>
+        function openNav() {
+          document.getElementById("mySidenav").style.width = "250px";
+        }
+        
+        function closeNav() {
+          document.getElementById("mySidenav").style.width = "0";
+        }
+        </script>
 </body>
 </html>
